1.2.8pre2: 2003-05-
	- improved focus handling (alt+tab, window close, workspace switch)
	- fix taskbar issues from pre1
 	- GNOME 2 workspace switcher applet (Adam James Fitzpatrick)
	- renamed --with-gnome-menus to --enable-menus-gnome1
	- cleanups in configurable keyboard bindings handling
	- renamed modMetaIsCtrlAlt to modSuperIsCtrlAlt. Win95keys now 
          enabled by default.

1.2.8pre1: 2003-05-04
	- fix: interaction between shaped windows and fullscreen (Owen Marshall)
	- fix: posible crash on shutdown
	- minor memory leak fixes
	- fix handling of fullscreen windows with shaped 
          window borders (Owen Marshall)
	- convert zh_CN.gb2312.po to UTF-8 (zh_CN.po) - lark@lark.net.cn
	- autodetect gnome/kde menu directories (Nehal Mistry)
	- fixed address bar behavior in various configurations
	- Hungarian translation update (Peter Somogyi)
	- Xft2 doesn't require RENDER extension (Make Fabian)
	- partial Korean translation (Hwang, Sang-Jin / Make Fabian)
	- LDFLAGS fix (Robert Klein)
	- fix problem with menufile items not having mnemonics (_)
	- initial implementation of NETWM system tray

1.2.7: 2003-03-08
	- minor bug fixes

1.2.7pre3: 2003-03-02
	- new option QuickSwitchGroupWorkspaces (if
          QuickSwitchToAllWorkspaces=1)
        - Italian translation update
	- more menu tweaks
	- implement NetWM window type SPLASH
	- ACPI status patch from Klaus Schneider
	- Made Alt+<left,right mouse button> behave in more standard manner
	- DoNotFocus window option added.

1.2.7pre2: 2003-02-26
	- Major improvement in percieved speed of menus
	- Dutch translation by Ton Kersten
	- add new options: ShowRun, ShowAbout, ShowWindowList,
          ShowLogoutSubMenu, AllowFullscreen (Ton Kersten)
	- support WM_WINDOW_ROLE, too
	- fix detection of netwm hints for some apps
	- fix AutoReloadMenus bug

1.2.7pre1: 2003-02-23
	- fix .order file handling for gnome menus (Thomas Zajic)
	- changed default theme to icedesert (Nehal Mistry)