@@ -6,6 +6,7 @@
 	- cleanups in configurable keyboard bindings handling
 	- renamed modMetaIsCtrlAlt to modSuperIsCtrlAlt. Win95keys now 
           enabled by default.
+	- fix Alt+Tab window getting stuck under load
 
 1.2.8pre1: 2003-05-04
 	- fix: interaction between shaped windows and fullscreen (Owen Marshall)
